hello-world-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /hello-world-one(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: aks-helloworld-one
                port:
                  number: 80
          - path: /hello-world-two(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: aks-helloworld-two
                port:
                  number: 80
          - path: /notification(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: aks-notifications
                port:
                  number: 8080
          - path: /polnilnica(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: polnilnice
                port:
                  number: 8080
          - path: /uporabniki(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: user
                port:
                  number: 8080
          - path: /vozila(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: vehicle
                port:
                  number: 8080
          - path: /iskanje(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: searcher
                port:
                  number: 8081
          - path: /plosca(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: aks-admin
                port:
                  number: 8080
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: aks-helloworld-one
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress-static
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /static/$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /static(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: aks-helloworld-one
                port:
                  number: 80
